--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="./index.html">Accueil</a></li>
                 <li><a href="./news.html">News</a></li>
                 <li><a href="./recompenses.html">Récompenses</a></li>
-                <li><a href="./forum.html">Forum</a></li>
+                <li><a href="./contact.html">Contact</a></li>
             </ul>
         </header>
     </section>
@@ -52,11 +52,10 @@
                 </form>
             </div>
             <div class="footer-bottom">
-                <a href="#" class="social"><ion-icon name="logo-github"></ion-icon></a>
-                <a href="#" class="social"><ion-icon name="logo-youtube"></ion-icon></a>
-                <a href="#" class="social"><ion-icon name="logo-facebook"></ion-icon></a>
-                <a href="#" class="social"><ion-icon name="logo-tumblr"></ion-icon></a>
-                <a href="#" class="social"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="https://github.com/gaetan-baudran" class="social"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="https://www.youtube.com/@CDPRED" class="social"><ion-icon name="logo-youtube"></ion-icon></a>
+                <a href="https://fr-fr.facebook.com/Cyberpunk2077FR/" class="social"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="https://twitter.com/cdprojektred" class="social"><ion-icon name="logo-twitter"></ion-icon></a>
             </div>
         </footer>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
