--- a/news.html
+++ b/news.html
@@ -17,7 +17,7 @@
             <li><a href="./index.html">Accueil</a></li>
             <li><a href="./news.html">News</a></li>
             <li><a href="./recompenses.html">Récompenses</a></li>
-            <li><a href="./forum.html">Forum</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </header>
         </section>
